# aie-codegen

./: .gitattributes  .gitignore  .gitmodules  MIGRATION_GUIDE.md  README.md
.github/: CODEOWNERS
.github/workflows/: AIE4_Medusa_sanity_tests_workflow.yml  Aigctrl_code_validation_workflow.yml  Build_aiert_fal_tests_worflow.yml  Build_tests_aiert_workflow.yml  Txn_validation_workflow.yml  code_scan_analysis_build.yml  copyright_updates.yml  coverity_tests_aiert_workflow.yml  precommit.yml  simnow_ep_resnet50_sanity_workflow.yml  window_build_tests_aiert_worflow.yml  windows_binskim_analysis_workflow.yml
driver/src/: CMakeLists.txt  Makefile.Linux
driver/src/common/: xaie_helper.c  xaie_helper.h  xaie_helper_internal.h  xaie_txn.c  xaie_txn.h
driver/src/core/: xaie_core.c  xaie_core_aie.c  xaie_uc.c  xaie_uc.h
driver/src/device/: xaie_device_aie.c  xaie_device_aie4.c  xaie_device_aie4.h  xaie_device_aieml.c
driver/src/dma/: xaie_dma.c  xaie_dma.h  xaie_dma_aie.c  xaie_dma_aie.h  xaie_dma_aie4.c  xaie_dma_aie4.h  xaie_dma_aieml.c  xaie_dma_aieml.h
driver/src/events/: xaie_events.c  xaie_events.h  xaie_events_aie4.h
driver/src/global/: xaie2ipugbl_reginit.c  xaie2pgbl_reginit.c  xaie4gbl_reginit.c  xaie4medusagbl_reginit.c  xaie_feature_config.h  xaiegbl.c  xaiegbl.h  xaiegbl_defs.h  xaiegbl_regdef.h  xaiegbl_reginit.c  xaiemlgbl_reginit.c
driver/src/interrupt/: xaie_interrupt.h  xaie_interrupt_backtrack.c  xaie_interrupt_control.c  xaie_interrupt_init.c
driver/src/io_backend/: xaie_io.c  xaie_io.h
driver/src/lite/: xaie_lite.c  xaie_lite.h  xaie_lite_aie.h  xaie_lite_aie4.h  xaie_lite_aieml.h  xaie_lite_hwcfg.h  xaie_lite_internal.h  xaie_lite_io.h  xaie_lite_npi.h  xaie_lite_privilege.c  xaie_lite_regdef_aie2p.h  xaie_lite_regdef_aie4.h  xaie_lite_regdef_aieml.h  xaie_lite_shim_aie.h  xaie_lite_shim_aie2ipu.h  xaie_lite_shim_aie2p.h  xaie_lite_shim_aie4.h  xaie_lite_shim_aieml.h  xaie_lite_util.h
driver/src/locks/: xaie_locks.c  xaie_locks_aie4.c  xaie_locks_aie4.h  xaie_locks_aieml.c
driver/src/memory/: xaie_mem.c  xaie_mem.h
driver/src/noc/: xaie_noc.h
driver/src/npi/: xaie_npi.c  xaie_npi_aie.c  xaie_npi_aieml.c
driver/src/perfcnt/: xaie_perfcnt.c  xaie_perfcnt.h
driver/src/pl/: xaie_plif.c
driver/src/pm/: xaie_clock.c  xaie_ecc.c  xaie_reset_aie.c
driver/src/stream_switch/: xaie_ss.c  xaie_ss.h  xaie_ss_aie.c  xaie_ss_aie.h  xaie_ss_aie4.c  xaie_ss_aie4.h  xaie_ss_aieml.c  xaie_ss_aieml.h
driver/src/timer/: xaie_timer.c
driver/src/trace/: xaie_trace.c
driver/src/util/: xaie_util_events.c  xaie_util_events_aieml.c  xaie_util_events_aieml.h
driver/tests/utest/: test_core.cpp  test_events.cpp
fal/: CMakeLists.txt
fal/cmake/: collect.cmake  depends.cmake  options.cmake
fal/cmake/modules/: FindLibxaiengine.cmake
fal/doc/: CMakeLists.txt
fal/examples/: CMakeLists.txt
fal/src/: CMakeLists.txt  Makefile
fal/src/common/: xaiefal-base.hpp
fal/src/rsc/: xaiefal-bc.hpp  xaiefal-events.hpp  xaiefal-pc.hpp  xaiefal-perf.hpp  xaiefal-rsc-base.hpp  xaiefal-rsc-group-impl.hpp  xaiefal-rsc-group.hpp  xaiefal-rscmgr-generic.hpp  xaiefal-rscmgr.hpp
src/: CMakeLists.txt  Makefile  Makefile.Linux  aie_codegen.h  aie_codegen.hpp  config.in  xaiengine.h
src/cmake/: AieCodegenCodeQL.cmake  AieCodegenHeaders.cmake  AieCodegenIncludes.cmake  AieCodegenInstall.cmake  AieCodegenMsvc.cmake  AieCodegenSourceLink.cmake  AieCodegenSources.cmake  GenerateSourceLink.cmake
src/common/: xaie_helper.c  xaie_helper.h  xaie_helper_internal.h  xaie_secure_io.c  xaie_secure_io_internal.h  xaie_txn.c  xaie_txn.h
src/core/: xaie_core.c  xaie_core.h  xaie_core_aie.h  xaie_core_aieml.c  xaie_core_aieml.h  xaie_elfloader.c  xaie_elfloader.h  xaie_uc.c  xaie_uc.h
src/device/: xaie_device_aie.c  xaie_device_aie.h  xaie_device_aie2ipu.c  xaie_device_aie2ipu.h  xaie_device_aie2p.c  xaie_device_aie2p.h  xaie_device_aie2ps.c  xaie_device_aie2ps.h  xaie_device_aie4.c  xaie_device_aieml.c  xaie_device_aieml.h
src/dma/: xaie_dma.c  xaie_dma_aie.c  xaie_dma_aie2p.c  xaie_dma_aie2p.h  xaie_dma_aie2ps.c  xaie_dma_aie2ps.h  xaie_dma_aie4.c  xaie_dma_aie4.h  xaie_dma_aieml.c
src/events/: xaie_events.c  xaie_events.h  xaie_events_aie.h  xaie_events_aie2p.h  xaie_events_aie2ps.h  xaie_events_aieml.h
src/global/: xaie2ipugbl_reginit.c  xaie2pgbl_reginit.c  xaie2psgbl_reginit.c  xaie4gbl_reginit.c  xaie4mdsgbl_reginit.c  xaie4medusagbl_reginit.c  xaie_feature_config.h  xaiegbl.c  xaiegbl.h  xaiegbl_dynlink.h  xaiegbl_regdef.h  xaiegbl_reginit.c  xaiemlgbl_reginit.c
src/interrupt/: xaie_interrupt.h  xaie_interrupt_aie.c  xaie_interrupt_aie.h  xaie_interrupt_aie2ipu.c  xaie_interrupt_aie2ipu.h  xaie_interrupt_aie2ps.c  xaie_interrupt_aie2ps.h  xaie_interrupt_aieml.c  xaie_interrupt_aieml.h
src/io_backend/: xaie_io.c  xaie_io.h  xaie_io_internal.h
src/io_backend/ext/: btree4.c  isa_stubs.h  xaie_cdo.c  xaie_controlcode.c  xaie_debug.c  xaie_io_common.c  xaie_io_common.h  xaie_ipu.c  xaie_sim.c  xaie_socket.c
src/io_backend/privilege/: xaie_io_privilege.c  xaie_io_privilege.h
src/io_backend/swig/: swig_controlcode.c  swig_controlcode_interface.h  swig_socket_interface.h
src/locks/: xaie_locks.c  xaie_locks.h  xaie_locks_aie.c  xaie_locks_aie.h  xaie_locks_aie4.c  xaie_locks_aie4.h  xaie_locks_aieml.c  xaie_locks_aieml.h
src/memory/: xaie_mem.c  xaie_mem.h
src/noc/: xaie_noc.c  xaie_noc.h
src/npi/: xaie_npi.c  xaie_npi.h  xaie_npi_aie.c  xaie_npi_aieml.c
src/perfcnt/: xaie_perfcnt.c
src/pl/: xaie_plif.c  xaie_plif.h
src/pm/: xaie_clock.c  xaie_clock.h  xaie_ecc.h  xaie_reset.c  xaie_reset.h  xaie_reset_aie.c  xaie_reset_aie.h  xaie_reset_aieml.c  xaie_reset_aieml.h  xaie_tilectrl.c  xaie_tilectrl.h
src/stream_switch/: xaie_ss.c  xaie_ss.h  xaie_ss_aie.c  xaie_ss_aie.h  xaie_ss_aie2ps.c  xaie_ss_aie2ps.h  xaie_ss_aie4.h  xaie_ss_aieml.c  xaie_ss_aieml.h
src/timer/: xaie_timer.c  xaie_timer.h
src/trace/: xaie_trace.c  xaie_trace.h
src/util/: xaie_util_status.h
tools/: Data_Integrity_Validator.py  README.md  sarif_to_text.py
(+14 files in other folders)
